# auto-company

./: .gitignore  CLAUDE.md  Makefile  PROMPT.md  README.md  auto-loop.sh  install-daemon.sh  monitor.sh  stop-loop.sh
projects/security-questionnaire-autopilot/: .env.local.example  README.md  package-lock.json  package.json  pyproject.toml
projects/security-questionnaire-autopilot/app/: globals.css  layout.tsx  page.tsx
projects/security-questionnaire-autopilot/scripts/: append-supabase-evidence-to-sales-doc.mjs  apply-supabase-bundle.sh  apply-supabase-sql.mjs  build-dashboard-sql-bundle.mjs  cloudflare-list-accounts.sh  cloudflare-pages-list-projects.sh  cloudflare-pages-sync-supabase-env.sh  cloudflare-pages-upsert-project-env-vars.sh  collect-base-url-candidates-from-cloudflare-pages-api.sh  collect-base-url-candidates-from-github-deployments.sh  collect-base-url-candidates-from-hosting.sh  collect-base-url-candidates-from-vercel-api.sh  cycle-005-hosted-supabase-apply-and-run.sh  discover-hosted-base-url.sh  fetch-db-evidence.mjs  fetch-supabase-workflow-evidence.mjs  format-base-url-candidates.sh  hosted-workflow-customer-intake.sh  hosted-workflow-smoke.sh  print-hosted-supabase-env-setup-help.sh  probe-hosted-base-url-candidates.sh  resolve-hosted-workflow-base-url.sh  select-hosted-base-url.sh  smoke-hosted-runtime.sh  supabase-build-db-url.sh  supabase-mgmt-provision-project.sh  validate-base-url-candidates.sh  validate-supabase-workflow-evidence.mjs  vercel-list-projects.sh  vercel-redeploy-from-base-url.sh  vercel-sync-supabase-env.sh  (+4 more)
(+227 files in other folders)
