[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "security-questionnaire-autopilot"
version = "0.1.0"
description = "MVP workflow for source-grounded security questionnaire drafting"
readme = "README.md"
requires-python = ">=3.10"

[project.scripts]
sq-autopilot = "sq_autopilot.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
